use postgres storage

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-flower==0.8.4
+# https://github.com/mher/flower/pull/724/
+git+git://github.com/bosonogi/flower.git@b7e0b5e62428272433feacc3eca2fd9125f61842
+
 celery==3.1.23
 redis
