--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# https://github.com/mher/flower/pull/724/
-git+git://github.com/bosonogi/flower.git@b7e0b5e62428272433feacc3eca2fd9125f61842
+# 0.8.4 backport of https://github.com/mher/flower/pull/724/
+git+git://github.com/ajb/flower.git@131b8fbc7e6bfba3f7c41bc1338cc729c507a312
 
 celery==3.1.23
 redis
